@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
title Biểu đồ lớp phân tích module Thanh toán\nMức mô hình: Specification
class PaymentPage <<boundary>> {
  + startPayment(orderId)
  + displayResult(result)
}
class PaymentController <<control>> {
  + initiatePayment(orderId): Payment
  + confirmPayment(result): Payment
}
class Order <<entity>> { totalAmount\nstatus }
class Payment <<entity>> { method\namount\nstatus\ntransactionCode }
interface PaymentGateway <<external>> {
  + pay(request): PaymentResult
}

PaymentPage ..> PaymentController : gọi
PaymentController ..> Payment : tạo / cập nhật
PaymentController ..> Order : kiểm tra / cập nhật
PaymentController ..> PaymentGateway : yêu cầu thanh toán
Order "1" *-- "0..1" Payment : thanh toán
@enduml
